# kitepy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  mkdocs.yml  pyproject.toml
docs/: docs.json  installation.mdx  introduction.mdx  quickstart.mdx
docs/advanced/: export.mdx  hyperparameter-tuning.mdx  profiling.mdx  transfer-learning.mdx
docs/api-reference/: callbacks.mdx  cnn.mdx  data-config.mdx  engine.mdx  metrics.mdx  model-config.mdx  presets.mdx  transformer.mdx  utils.mdx  vision.mdx
docs/concepts/: architecture.mdx  configuration.mdx  philosophy.mdx
docs/examples/: cifar-classification.mdx  custom-model.mdx  fine-tuning-pretrained.mdx  imagenet-training.mdx  quickstart-cnn.mdx  quickstart-vit.mdx  transfer-learning.mdx
docs/training/: basics.mdx  callbacks.mdx  distributed.mdx  optimization.mdx
docs/vision/: augmentation.mdx  cnn.mdx  datasets.mdx  transformers.mdx
examples/vision/: advanced_features.py  quickstart_cnn.py  quickstart_comprehensive_cnn_vit.py  quickstart_vit.py
kitepy/: __init__.py
kitepy/core/: __init__.py  base.py  callbacks.py  config.py  engine.py  lr_finder.py  metrics.py  presets.py  utils.py
kitepy/pillars/: __init__.py
kitepy/pillars/audio/: __init__.py
kitepy/pillars/generative/: __init__.py
kitepy/pillars/language/: __init__.py
kitepy/pillars/multimodal/: __init__.py
kitepy/pillars/vision/: __init__.py  data.py  models.py  wrappers.py
tests/: test_all_examples.py
tests/core/: test_callbacks.py  test_config.py  test_engine.py  test_metrics.py  test_utils.py
tests/vision/: test_advanced_features.py  test_cnn.py  test_comprehensive_features.py  test_quick.py  test_smoke_cnn.py  test_smoke_vit.py  test_transformer.py
